# vecodex

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  DCO.md  Dockerfile  Dockerfile_dev  LICENSE  README.md  build-dev.sh  build.sh  docker-compose.yml  prometheus.yml
.github/: copilot-instructions.md
.github/workflows/: build-and-push-app-image.yml  build-and-push-image.yml  build-index.yml  build-operator.yml  build.yml  cmake-single-platform.yml  cmake-ubuntu.yml
app/: CMakeLists.txt  Dockerfile  Dockerfile_dev  README.md  build-dev.sh  build.sh  docker-compose.yml
app/configs/: coordinator_config.json  searcher_1_config.json  searcher_2_config.json  writer_config.json
app/configs/test_configs/: coordinator_config.json  searcher_1_config.json  searcher_2_config.json  writer_config.json
app/examples/: etcd_client.cpp  run_client.cpp  run_writer_client.cpp
app/include/: Base.h  BaseClient.h  BootstrapConfig.h  Coordinator.h  CoordinatorClient.h  EtcdClient.h  Merging.h  Searcher.h  SearcherClient.h  StorageClient.h  ThreadPool.h  Writer.h  WriterClient.h  base.h  coordinator.h  etcd_client.h  searcher.h
app/include/utils/: PrometheusExposer.h  Stats.h
app/proto/: service.proto
app/src/: Base.cpp  BaseClient.cpp  Coordinator.cpp  EtcdClient.cpp  Searcher.cpp  SearcherClient.cpp  StorageClient.cpp  ThreadPool.cpp  Writer.cpp  WriterClient.cpp  base.cpp  coordinator.cpp  etcd_client.cpp  main.cpp  searcher.cpp
app/tests/: CMakeLists.txt
app/tests/coordinator/: data.py  docker-compose.yml  locustfile.py  run.sh  test.py
app/tests/load/: locustfile.py  run.sh
app/tests/metrics/: data.py  docker-compose.yml  run.sh  test_precision.py
app/tests/metrics/configs/: writer_config.json
app/tests/ut/: merging_test.cpp
include/: DocumentMetadata.h
index/: .clang-format  .gitmodules  CMakeLists.txt  README.md  bootstrap_xcode.sh
index/baselines/: IndexFactory.h  faiss.cpp  faiss.h  io.h
index/include/: DocumentMetadata.h  IBaseIndex.h  IBaseSegment.h  IIndex.h  ISegment.h  Index.h  IndexConfig.h  Segment.h  SegmentFactory.h  VecodexIndex.h  VecodexSegment.h  VecodexSegmentFactory.h
index/src/: DocumentMetadata.cpp  IndexConfig.cpp  Segment.cpp  VecodexIndex.cpp  VecodexSegment.cpp  VecodexSegmentFactory.cpp
index/tests/: Benchmark.cpp  VecodexIndexTest.cpp
kube-operator/: Makefile  PROJECT  README.md  go.mod
kube-operator/api/v1alpha1/: groupversion_info.go  vecodexset_types.go  zz_generated.deepcopy.go
kube-operator/cmd/: main.go
kube-operator/config/crd/: kustomization.yaml
kube-operator/config/crd/bases/: apps.vecodex.link_vecodexsets.yaml
kube-operator/config/default/: kustomization.yaml
kube-operator/config/manager/: kustomization.yaml  manager.yaml
kube-operator/config/manifests/: kustomization.yaml
kube-operator/config/prometheus/: monitor.yaml
kube-operator/config/rbac/: auth_proxy_client_clusterrole.yaml  auth_proxy_role.yaml  auth_proxy_role_binding.yaml  auth_proxy_service.yaml  kustomization.yaml  leader_election_role.yaml  leader_election_role_binding.yaml  role.yaml  role_binding.yaml  service_account.yaml  vecodexset_editor_role.yaml  vecodexset_viewer_role.yaml
kube-operator/config/samples/: apps_v1alpha1_vecodexset.yaml  kustomization.yaml
kube-operator/internal/controller/: suite_test.go  vecodexset_controller.go  vecodexset_controller_test.go
kube-operator/test/e2e/: e2e_suite_test.go  e2e_test.go
src/: DocumentMetadata.cpp
tests/: VecodexIndexTest.cpp
